--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
     "@discordjs/rest": "^2.6.0",
+    "axios": "^1.13.2",
+    "canvas": "^3.2.0",
     "captcha-canvas": "^3.3.4",
     "discord-api-types": "^0.38.26",
     "discord.js": "^14.22.1",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "gif-encoder-2": "^1.0.5",
+    "gif-frames": "^1.0.1",
+    "image-size": "^2.0.2",
+    "jimp": "^1.6.0"
   }
 }
